# briefly

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  install.ps1  install.sh  pyproject.toml
config/: config.example.yaml
docs/concept/: 01-briefing-fuer-claude-fable.md  02-claude-setup-empfehlungen.md  03-branding-design-konzept.md
scripts/: test_global_command.sh
src/briefly/: __init__.py  audio.py  cli.py  config.py  curation.py  daemon.py  doctor.py  install.py  models.py  pipeline.py  scheduler.py  segments.py  update.py
src/briefly/delivery/: base.py  local_feed.py
src/briefly/llm/: base.py  ollama_provider.py
src/briefly/sources/: base.py  inbox.py  rss.py
src/briefly/templates/: __init__.py
src/briefly/templates/launchd/: __init__.py  com.briefly.dailyrun.plist  com.briefly.web.plist
src/briefly/tts/: base.py  local_provider.py  piper_provider.py  preprocessor.py
src/briefly/web/: app.py
src/briefly/web/static/: style.css
src/briefly/web/templates/: base.html  dashboard.html  feed_preview.html  feeds.html  inbox.html  segments.html  settings.html
tests/: test_audio.py  test_config.py  test_curation.py  test_daemon.py  test_delivery.py  test_doctor.py  test_health.py  test_inbox_source.py  test_install.py  test_narrative.py  test_package.py  test_piper_provider.py  test_preprocessor.py  test_prompts.py  test_rss_source.py  test_segments.py  test_update.py  test_web.py
tests/fixtures/: test_calendar.ics
