[project]
name = "briefly"
version = "0.1.0"
description = "Persönliches tägliches Audio-Briefing (Daily Cast)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pyyaml",
    "feedparser",
    "httpx",
    "ollama",
    "piper-tts",
    "feedgen",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
briefly = "briefly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefly"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
